<resources>
    <string name="app_name">AndroidScript</string>
    <string name="menu_download">Download</string>
    <string name="select_activity__invalid_name">Alpha-numeric characters and underscores</string>
    <string name="select_activity__file_exists">File created!!!</string>
    <string name="select_activity__name_empty">Filename cannot be empty!</string>
    <string name="select_activity__script_name">New Script File Name</string>
    <string name="select_activity__load">Load</string>
    <string name="select_activity__create">Create</string>
    <string name="select_activity__description">Select or Create Script File</string>


    <!-- TODO: CLEANUP OLD RESOURCES -->

    <string name="state">IDLE</string>
    <string name="selectFriends">選擇好友</string>
    <string name="selectCraft">選擇禮裝</string>
    <string name="preStage">關卡前置</string>
    <string name="eatApple">回復體力</string>
    <string name="repeat">重複次數</string>
    <string name="change_skill">換人技</string>
    <string-array name="friends">
        <item>無</item>
        <item>CBA</item>
        <item>孔明</item>
    </string-array>
    <string-array name="apples">
        <item>自然回體</item>
        <item>聖晶石</item>
        <item>金蘋果</item>
        <item>銀蘋果</item>
        <item>銅蘋果</item>
    </string-array>
    <string-array name="craft">
        <item>無</item>
    </string-array>
    <string-array name="skl">
        <item>不使用</item>
        <item>無對象</item>
        <item>從者一</item>
        <item>從者二</item>
        <item>從者三</item>
    </string-array>
    <string-array name="craft_skl_swap">
        <item>不使用</item>
        <item>一四換</item>
        <item>一五換</item>
        <item>一六換</item>
        <item>二四換</item>
        <item>二五換</item>
        <item>二六換</item>
        <item>三四換</item>
        <item>三五換</item>
        <item>三六換</item>
    </string-array>


    <string name="servantSkills">從者技能</string>
    <string name="craftSkills">御主技能</string>
    <string name="skill1">技能一</string>
    <string name="skill2">技能二</string>
    <string name="skill3">技能三</string>
    <string name="servant1">從者一</string>
    <string name="servant2">從者二</string>
    <string name="servant3">從者三</string>

    <string name="autoBattle">自動選卡</string>
    <string name="endStage">關卡結束</string>
    <string name="nobel">寶具</string>
    <string name="btn_down">Down</string>
    <string name="btn_del">Delete</string>
    <string name="btn_up">Up</string>
    <string name="ark_knights_description">說明</string>
    <string name="hint">刷關次數</string>
    <string name="TillEmpty">刷到乾</string>
    <string name="EatMedicine">理智劑</string>
    <string name="EatStone">石頭&amp;理智劑</string>
    <string name="fgo">FGO</string>
    <string name="ark_knights">ArkKnights</string>
    <string name="basic_editor">通用腳本(橫向)</string>
    <string name="ark_knights_description_content">自動周回指定關卡，開始前請先開啟點選關卡並點選代理指揮</string>
    <string name="Save">儲存/載入</string>
    <string name="StartService">啟動服務</string>
    <string name="exit">關閉服務</string>
    <string name="game_position">遊戲位置</string>
    <string name="basic_portrait">通用腳本(直向)</string>
    <string name="block_name">Title</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="toggle_portrait">Portrait</string>
    <string name="toggle_landscape">LandScape</string>
    <string name="select_activity__manage_resource">MANAGE</string>
    <string name="title_activity_manage">ManageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>