<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.SelectActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/select_activity__description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_dialog_box"
        />

    <Spinner
        android:id="@+id/select_file_list"
        android:layout_width="171dp"
        android:layout_height="47dp" />
    <Button
        android:id="@+id/select_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_activity__load"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/select_new_name"
        android:layout_width="200dp"
        android:hint="@string/select_activity__script_name"
        android:text=""
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/select_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_activity__create"
        android:layout_gravity="center"/>

</LinearLayout>