<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle_orientation"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3pt"
                android:layout_marginEnd="5pt"
                android:textOff="@string/toggle_portrait"
                android:textOn="@string/toggle_landscape" />

            <Button
                android:id="@+id/save_file"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3pt"
                android:layout_marginEnd="5pt"
                android:text="@string/Save"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/start_service"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3pt"
                android:layout_marginEnd="5pt"
                android:text="@string/StartService"
                android:textColor="#5E35B1" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_button_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_code_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>