<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/craft_skills"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    card_view:cardBackgroundColor="@color/green"
    card_view:cardCornerRadius="10dp"
    card_view:contentPadding="3dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/craft_skills_bg">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/craftSkills"
            android:textSize="10pt"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="54dp"
            android:text="@string/skill1"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="16dp"
            android:text="@string/skill2"
            card_view:layout_constraintStart_toEndOf="@+id/textView2"
            card_view:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="16dp"
            android:text="@string/skill3"
            card_view:layout_constraintStart_toEndOf="@+id/textView5"
            card_view:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="54dp"
            android:text="@string/change_skill"
            card_view:layout_constraintStart_toEndOf="@+id/textView4"
            card_view:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/btn_del"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="3dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_close_white_24dp"
            android:contentDescription="@string/btn_del"/>

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="40dp"
            android:layout_height="40dp"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_del"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            android:contentDescription="@string/btn_down"/>

        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="40dp"
            android:layout_height="40dp"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_down"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
            android:contentDescription="@string/btn_up"/>

        <Spinner
            android:id="@+id/skill_1_1"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:layout_marginStart="7dp"
            android:background="@color/craft_skills_bg"
            android:entries="@array/skl"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/skill_1_2"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:background="@color/craft_skills_bg"
            android:entries="@array/skl"
            card_view:layout_constraintStart_toStartOf="@+id/textView5"
            card_view:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Spinner
            android:id="@+id/skill_1_3"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:background="@color/craft_skills_bg"
            android:entries="@array/skl"
            card_view:layout_constraintStart_toStartOf="@+id/textView4"
            card_view:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/skill_2_1"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:background="@color/craft_skills_bg"
            android:entries="@array/craft_skl_swap"
            card_view:layout_constraintStart_toStartOf="@+id/textView6"
            card_view:layout_constraintTop_toBottomOf="@+id/textView6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>