<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/click"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    card_view:cardBackgroundColor="@color/green"
    card_view:cardCornerRadius="10dp"
    card_view:contentPadding="3dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#96F">

        <TextView
            android:id="@+id/ZeroVarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textColor="#FFF"
            android:textSize="30dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_del"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="3dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_close_white_24dp"
            android:contentDescription="@string/btn_del"/>

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="40dp"
            android:layout_height="40dp"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_del"
            card_view:layout_constraintTop_toTopOf="@+id/btn_del"
            card_view:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            android:contentDescription="@string/btn_down"/>

        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="40dp"
            android:layout_height="40dp"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_down"
            card_view:layout_constraintTop_toTopOf="@+id/btn_del"
            card_view:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
            android:contentDescription="@string/btn_up" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>